2011-01-11  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Nate Chapin.

        Enforce READ_ONLY transactions in IndexedDB
        https://bugs.webkit.org/show_bug.cgi?id=52229

        Add READ_ONLY_ERR and return it whenever delete or put
        are called.  Note that IDBCursor's delete and update
        are simply aliases for delete/put, which is why no
        extra code is required to handle those cases.

        Test: storage/indexeddb/transaction-read-only.html

        * dom/ExceptionCode.cpp:
        * storage/IDBCursorBackendImpl.cpp:
        (WebCore::IDBCursorBackendImpl::deleteFunction):
        * storage/IDBDatabase.idl:
        * storage/IDBDatabaseException.h:
        * storage/IDBDatabaseException.idl:
        * storage/IDBObjectStoreBackendImpl.cpp:
        (WebCore::IDBObjectStoreBackendImpl::put):
        (WebCore::IDBObjectStoreBackendImpl::deleteFunction):
        (WebCore::IDBObjectStoreBackendImpl::deleteIndex):

2011-01-11  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Seidel.

        [GTK] minimal build breaks in RenderThemeGtk3
        https://bugs.webkit.org/show_bug.cgi?id=52202

        * platform/gtk/RenderThemeGtk3.cpp: Added VIDEO guards around
        initMediaColors().

2011-01-11  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Carlson.

        [GStreamer] PlatformVideoWindowMac implementation
        https://bugs.webkit.org/show_bug.cgi?id=50770

        This new implementation will be used on Mac OS to display the
        fullscreen video window with the GStreamer-based media player.

        * platform/graphics/gstreamer/GStreamerGWorld.cpp:
        (WebCore::gstGWorldSyncMessageCallback):
        * platform/graphics/gstreamer/PlatformVideoWindow.h:
        (WebCore::PlatformVideoWindow::window):
        * platform/graphics/gstreamer/PlatformVideoWindowMac.mm:
        (PlatformVideoWindow::PlatformVideoWindow):
        (PlatformVideoWindow::~PlatformVideoWindow):